--- a/index.html
+++ b/index.html
@@ -239,14 +239,14 @@
       </section>
 
       <section id="contact" class="contact">
-         <h2 class="contact__title">Get our newsletter and be the first to know!</h2>
-         <p class="contact__text">You'll get an email about once a month. We'll never share your address.</p>
-         <form class="contact__form">
-           <label class="contact__email">
-             <input class="contact__input" type="email" name="email" placeholder="Enter Your Email">
-           </label>
-           <button class="contact__button button">Subscribe</button>
-         </form>
+        <h2 class="contact__title">Get our newsletter and be the first to know!</h2>
+        <p class="contact__text">You'll get an email about once a month. We'll never share your address.</p>
+        <form class="contact__form">
+          <label class="contact__email">
+            <input class="contact__input" type="email" name="email" placeholder="Enter Your Email">
+          </label>
+          <button class="contact__button button">Subscribe</button>
+        </form>
       </section>
 
       <section id="team" class="team">
@@ -292,34 +292,34 @@
 
       <footer class="footer">
         <p class="footer__text">© 2014, Based by Agileinfoways.</p>
-        <ul class="footer__social social">
-          <li class="social__item">
-            <a href="#" class="social__link">
-              <svg class="social__icon" width="17" height="15">
-                  <use xlink:href="images/social-icons.svg#icon-twitter"></use>
+        <ul class="footer__links pages">
+          <li class="pages__item">
+            <a href="#" class="pages__link">
+              <svg class="pages__icon" width="17" height="15">
+                  <use href="images/icons.svg#icon-twitter"></use>
               </svg>
               <span class="visually-hidden">Based in Twitter</span>
             </a>
           </li>
-          <li class="social__item">
-            <a href="#" class="social__link">
-              <svg class="social__icon" width="9" height="19">
-                <use xlink:href="images/social-icons.svg#icon-facebook"></use>
+          <li class="pages__item">
+            <a href="#" class="pages__link">
+              <svg class="pages__icon" width="9" height="19">
+                <use href="images/icons.svg#icon-facebook"></use>
               </svg>
               <span class="visually-hidden">Based in Facebook</span>
             </a>
           </li>
-          <li class="social__item">
-            <a href="#" class="social__link" >
-              <svg class="social__icon" width="24" height="24">
-                <use xlink:href="images/social-icons.svg#icon-pinterest"></use>
+          <li class="pages__item">
+            <a href="#" class="pages__link" >
+              <svg class="pages__icon" width="24" height="24">
+                <use href="images/icons.svg#icon-pinterest"></use>
               </svg>
               <span class="visually-hidden">Based in Pinterest</span>
             </a>
           </li>
-          <li class="social__item">
-            <a href="#" class="social__link" >
-              <svg class="social__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="27px" height="30px" viewBox="0 0 25 30" enable-background="new 0 0 25 30" xml:space="preserve">
+          <li class="pages__item">
+            <a href="#" class="pages__link" >
+              <svg class="pages__icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="27px" height="30px" viewBox="0 0 25 30" enable-background="new 0 0 25 30" space="preserve">
                 <g transform="translate(0, 10) scale(0.00270000,-0.00270000)">
                   <path d="M2629.3,1419.5C1590.1,1241.7,839.3,656.9,649.6-133.4c-67.2-280.6-67.2-790.3,0-1066.9c189.7-774.5,881.2-1260.5,1794-1264.5h264.8v-296.4c0-276.6,7.9-300.3,114.6-399.1c118.5-102.8,229.2-316.1,189.7-355.6c-11.9-15.8-217.3-39.5-450.5-59.3c-1228.9-94.9-2011.3-462.3-2323.4-1090.6c-146.2-292.4-181.8-825.8-83-1161.7c181.8-628.3,802.2-1066.9,1738.6-1225c410.9-71.2,1351.4-27.7,1754.4,79c932.5,245,1509.5,762.6,1687.3,1513.4c185.7,786.3-39.5,1402.8-735,2011.3c-162,138.3-410.9,371.5-557.2,513.7c-391.2,379.4-367.5,513.7,173.9,983.9c410.9,355.6,600.6,608.5,703.3,936.5c134.4,434.7,94.8,1213.1-79,1552.9c-67.2,134.3-288.4,355.6-458.4,462.3c-63.2,39.5-67.2,51.4-15.8,86.9c31.6,23.7,158.1,51.4,276.6,67.2c462.3,51.4,750.8,150.1,750.8,252.9C5395.3,1447.2,2846.7,1455.1,2629.3,1419.5z M2858.5,992.8c600.6-177.8,1138-1142,1055-1892.7c-75.1-675.7-438.6-1090.6-952.3-1090.6c-434.7,0-853.5,316.1-1102.5,833.8c-173.9,367.5-229.2,644.1-209.4,1062.9c19.8,407,154.1,723.1,387.2,916.7C2301.4,1048.1,2518.7,1091.6,2858.5,992.8z M3482.9-3966.3c683.6-173.9,1161.7-655.9,1161.7-1165.7c0-608.5-608.5-1177.5-1430.4-1343.5c-383.3-75.1-513.7-75.1-893,3.9c-411,83-699.4,229.2-944.4,482.1C373-4977.9,1858.8-3551.4,3482.9-3966.3z"/>
                   <path d="M7726.7,617.4v-829.8h-829.8h-829.8v-237.1v-237.1h829.8h829.8v-829.8v-829.8h256.8h256.8v829.8v829.8h829.8H9900v237.1v237.1h-829.8h-829.8v829.8v829.8h-256.8h-256.8V617.4z"/>
