--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           <label class="contact__email">
             <input class="contact__input" type="email" name="email" placeholder="Enter Your Email">
           </label>
-          <button type="button" class="contact__button button">Subscribe</button>
+          <button type="submit" class="contact__button button">Subscribe</button>
         </form>
       </section>
 
