--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,11 @@
             <a class="nav__link" href="#contact">Contact</a>
           </li>
         </ul>
-        <button class="nav__button button" type="button">Sign up</button>
+        <button class="nav__button" type="button">
+          <a href="#contact" class="nav__sign-up-link">
+            Sign up
+          </a>
+        </button>
       </nav>
     </header>
 
@@ -82,7 +86,11 @@
             </p>
           </li>
         </ul>
-        <button class="about-us__button button" type="button">More about us</button>
+        <button class="about-us__button button" type="button">
+          <a class="about-us__link" href="#portfolio">
+            More about us
+          </a>
+        </button>
       </section>
 
       <section id="skills" class="skills">
@@ -127,23 +135,6 @@
         <div class="portfolio__line line">
           <div class="portfolio__logo logo logo--orange"></div>
         </div>
-        <ul class="portfolio__filter">
-          <li class="portfolio__filter-item">
-            <a href="#" class="portfolio__filter-link portfolio__filter-link--active">All</a>
-          </li>
-          <li class="portfolio__filter-item">
-            <a href="#" class="portfolio__filter-link">Applications</a>
-          </li>
-          <li class="portfolio__filter-item">
-            <a href="#" class="portfolio__filter-link">Illustrations</a>
-          </li>
-          <li class="portfolio__filter-item">
-            <a href="#" class="portfolio__filter-link">Logo</a>
-          </li>
-          <li class="portfolio__filter-item">
-            <a href="#" class="portfolio__filter-link">Photo</a>
-          </li>
-        </ul>
         <div class="portfolio__gallery">
           <a href="" class="portfolio__link">
             <img class="portfolio__image" src="./images/portfolio/1.png" alt="image-1">
